--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="app_name">practica01</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-   <string name="lbl_usuario">Usuario</string>
+    <string name="lbl_usuario">Usuario</string>
     <string name="lbl_password">Password</string>
     <string name="lbl_boton_login">Ingresar</string>
     <string name="lbl_inicio_dia">Iniciar Dia</string>
     <string name="action_login">Login</string>
+    <string name="title_activity_no_visita">No visita</string>
+
 </resources>
